an intermediate state, not testable
git-svn-id: https://korpling.german.hu-berlin.de/svn/saltnpepper/PepperModules/GenericXMLModules/trunk@7069 47085195-c50e-4317-8f43-7cb808db0f00